--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -146,6 +146,7 @@
         <file>svg/route_destinations.svg</file>
         <file>svg/route_sel_dest.svg</file>
         <file>svg/route_sources.svg</file>
+        <file>svg/auto_expand_waves.svg</file>
         <file>svg/grid_on.svg</file>
         <file>svg/delete_sel_tracks.svg</file>
         <file>svg/duplicate_sel_track.svg</file>
